fix: no plugin main class in manifest.json

--- a/plugin/src/main/resources/manifest.json
+++ b/plugin/src/main/resources/manifest.json
@@ -4,6 +4,7 @@
     "Version": "${version}",
     "Website": "https://www.irori.cc/",
     "Description": "TBD",
+    "Main": "cc.irori.refixes.Refixes",
     "Authors": [
         {
             "Name": "KabanFriends",
