build: add guava as main plugin dependency

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,11 @@ shadow = "9.3.1"
 spotless = "8.2.1"
 hytale = "2026.02.06-aa1b071c2"
 hyxin = "7399430"
+guava = "33.5.0-jre"
 
 [libraries]
 shadow = { group = "com.gradleup.shadow", name = "com.gradleup.shadow.gradle.plugin", version.ref = "shadow" }
 spotless = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
 hytale = { group = "com.hypixel.hytale", name = "Server", version.ref = "hytale" }
 hyxin = { group = "curse.maven", name = "hyxin-1405491", version.ref = "hyxin" }
+guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
